objects/PC_OcrResponse__c.object
<CustomObject>
    <description>It stores the OCR response of the document after processing.</description>
    <fields>
        <fullName>PC_AdditionalInformation__c</fullName>
        <description>Stores additional information when OCR extraction is in Error status</description>
        <label>Additional Information</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_OcrQueue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OCR Queue</label>
        <referenceTo>PC_OcrQueue__c</referenceTo>
        <relationshipLabel>OCR Responses</relationshipLabel>
        <relationshipName>OCR_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_OcrServiceResponseId__c</fullName>
        <description>Unique identifier for a document request</description>
        <externalId>true</externalId>
        <label>OCR Service Response Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_OcrService__c</fullName>
        <description>Name of the OCR Service</description>
        <label>OCR Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amazon Textract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_OcrStatus__c</fullName>
        <description>The current status of OCR processing</description>
        <label>OCR Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>OCR Enqueue</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>OCR Response</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OCRR-{00000000}</displayFormat>
        <label>OCR Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OCR Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>